organized files a bit better. squashed a UI bug.

--- a/src/assets/scss/modules/_news.scss
+++ b/src/assets/scss/modules/_news.scss
@@ -82,41 +82,3 @@ aside {
 	text-align: left;
 	margin-left: auto;
 }
-// Sidebar Widget
-aside.sidebar {
-	.widget ul {
-		list-style-type:none;
-		margin:1rem 0 2rem 0;
-		ul {
-			padding-left:20px;
-		}
-	}
-	.widget ul li {
-		margin-bottom: .75rem;
-	}
-	.widget ul li a {
-		font-family: $open-sans;
-		font-weight: 600;
-		font-size: 1.5rem;
-		text-transform: unset;	
-		&:before {
-			content: "»";
-			color: $orange;
-			padding-right: 4px;
-		}
-	}
-	.widget ul.compact-archives {
-		li a {
-			&:before {
-				content: "";
-			}
-		}
-		li strong a {
-			&:before {
-				content: "»";
-				color: $orange;
-				padding-right: 4px;
-			}
-		}
-	}
-}
